data/collection/fixes/descriptions/scala/scala-5830
This code succeeds in 2.9.x, but fails in 2.10.0-SNAPSHOT. The old pattern matcher would move the guard inside the branch if there were no other branches with the same value.

```scala
import scala.annotation._

object Foo extends App {
	def eof: Boolean = false

	def method(ch: Char) = (ch: @switch) match {
	    case 'a' if eof => println("a with oef")
	    case 'b' => println("b")
	    case 'c' => println("c")
	}
}
```

It says:
```scala
switch-pat.scala:6: error: could not emit switch for @switch annotated match
	def method(ch: Char) = (ch: @switch) match {
                                     ^
one error found
```